--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Stream Deck Google Meet Actions",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Connects to our accompanying Elgato Stream Deck plugin to create physical controls for your Google Meet calls.",
   "author": "Chris Regado",
   "homepage_url": "https://github.com/ChrisRegado/streamdeck-googlemeet",
@@ -23,6 +23,7 @@
         "event_handlers/participants_event_handler.js",
         "event_handlers/pin_presentation_event_handler.js",
         "event_handlers/hand_event_handler.js",
+        "event_handlers/captions_event_handler.js",
         "stream_deck_connection_manager.js",
         "errors.js",
         "main.js"
