--- a/com.chrisregado.googlemeet.sdPlugin/manifest.json
+++ b/com.chrisregado.googlemeet.sdPlugin/manifest.json
@@ -268,6 +268,21 @@
       "SupportedInMultiActions": false,
       "Tooltip": "Show/hide the list of meeting participants.",
       "UUID": "com.chrisregado.googlemeet.toggleparticipants"
+    },
+    {
+      "Icon": "images/actions/emoji_react_sparkling_heart",
+      "Name": "Emoji react - Sparkling heart",
+      "States": [
+        {
+          "Image": "images/keys/emoji_react_sparkling_heart",
+          "Title": "Emoji react - Sparkling heart",
+          "TitleAlignment": "top",
+          "FontSize": "10",
+          "ShowTitle": false
+        }
+      ],
+      "Tooltip": "Emoji react - Sparkling heart",
+      "UUID": "com.chrisregado.googlemeet.emojireact.sparklingheart"
     }
   ],
   "SDKVersion": 2,
