Upgraded to Python 3.11 but have run into something no longer allowed in that version. Need to fix the code to avoid passing coroutine to wait()

--- a/streamdeck-plugin/requirements.txt
+++ b/streamdeck-plugin/requirements.txt
@@ -1,5 +1,5 @@
-altgraph==0.17
-macholib==1.14
-pyinstaller==4.6
-pyinstaller-hooks-contrib==2021.1
-websockets==8.1
+altgraph~=0.17
+macholib~=1.16
+pyinstaller~=5.9
+pyinstaller-hooks-contrib~=2023.1
+websockets~=10.4
