Use language-agnostic jsnames for Hand and Captions buttons

--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -16,6 +16,7 @@
         "event_handlers/base_event_handler.js",
         "event_handlers/toggle_event_handler.js",
         "event_handlers/label_based_toggle_event_handler.js",
+        "event_handlers/aria_pressed_based_toggle_event_handler.js",
         "event_handlers/side_panel_event_handler.js",
         "event_handlers/camera_event_handler.js",
         "event_handlers/chat_event_handler.js",
